--- a/about.html
+++ b/about.html
@@ -80,8 +80,9 @@
                         <div class="col-md-12 nav-menu">
                             <div class="col-md-3">
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/logo2.png" alt=""/></a>
+                                    <a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
                                 </div>
+								<br>
                             </div>
                             <div class="col-md-9">
                                 <div class="menu">
@@ -102,6 +103,7 @@
                                             <li class="css-border"><a href="contact.html">Contact us</a></li>
                                         </ul>
                                     </nav>
+									<!--
                                     <div class="menu-icon">
                                         <div class="site-search">
                                             <i class="fa fa-search"></i>
@@ -113,6 +115,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    -->
                                 </div>
                             </div>
                         </div>
@@ -156,14 +159,16 @@
 								Dedicated client representatives – providing one-on-one support to our clients. The flexibility we give to our customers along with the years
 								of experience our management team provides. These factors give Atlas the ability to overcome obstacles and to deliver on time closings and are key
 								elements that keep our clients coming back to us at Atlas. Our company is completely paperless, utilizing centralized processing and
-								internal data source plants, which gives our customers access to status information 24/7.</p>
+								internal data source plants, which gives our customers access to status information 24/7.
+							</p>
 							<p>Mission Statement
 								<br>
 								We at Atlas Title are committed to providing quality real estate title, settlement & escrow services to our clients with experience, integrity & flexibility.
 								<br>
 								We at Atlas Title are committed to helping our team members thrive by providing ongoing training, education and coaching.
 								<br>
-								We at Atlas Title are committed to giving back to our community through the donation of our gift of time, talent and financial support</p>
+								We at Atlas Title are committed to giving back to our community through the donation of our gift of time, talent and financial support
+							</p>
 						</div>	
 						<div class="about-countup">
 							<div class="counting-inner">
@@ -189,7 +194,7 @@
 				</div>	
 				<div class="col-md-5">
 					<div class="about-us-img">
-						<img src="img/about.jpg" alt=""/>
+						<img src="img/hands.png" alt=""/>
 					</div>
 				</div>					
 			</div>
@@ -213,7 +218,7 @@
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="team-member">
 						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-							<img src="img/founder1.jpg" alt=""/>
+							<img src="img/founder1.jpg" alt="" style="width: 450px">
 							<div class="team-overlay">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -229,11 +234,11 @@
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-12">
-						<p>I was born and raised in Casablanca Morocco. My passion for exploration fueled a desire in me to set out on my own and come to the United States.
-                           I borrowed $500 from my aunt for a plane ticket and that was my first step into the unknown. I managed to put myself through college while working
-                           full time in the service industry. Going to school and paying out of state tuition was not easy but it taught me that if you work hard, you can accomplish
-                           anything you set your mind to do.
-                        </p>
+					<p>I was born and raised in Casablanca Morocco. My passion for exploration fueled a desire in me to set out on my own and come to the United States.
+                        I borrowed $500 from my aunt for a plane ticket and that was my first step into the unknown. I managed to put myself through college while working
+                        full time in the service industry. Going to school and paying out of state tuition was not easy but it taught me that if you work hard, you can accomplish
+                        anything you set your mind to do.
+					</p>
 				</div>
             </div>
                 <div class="row">
@@ -249,7 +254,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member">
                         <div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-                            <img src="img/founder2.jpg" alt=""/>
+                            <img src="img/founder2.jpg" alt="" style="width: 450px">
                             <div class="team-overlay">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -301,7 +306,7 @@
 	
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -->
+		<!-- Footer Top Section Start -
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
@@ -371,20 +376,20 @@
 		</div>
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
-        <div class="footer-bottom-sec">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="copy-right ">
-                        <p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="copy-right ">
-                        <p><img src="img/mps_logo.png" style="width: 15%"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+		<div class="footer-bottom-sec">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p><a href="http://www.meltingpotsolutions.co"><img src="img/mps_logo.png" style="width: 15%"></a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- Footer Bottom Section End -->
 	</footer>
 	<!-- Footer Section End -->
