--- a/contact.html
+++ b/contact.html
@@ -91,18 +91,18 @@
 											<li class="css-border"><a href="bankers.html">Bankers</a></li>
 											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="service-1.html">Why Title Insurance?1</a></li>
-													<li><a href="service-2.html">Closing Process</a></li>
-													<li><a href="service-details-1.html">Closing Costs Explained</a></li>
-													<li><a href="service-details-2.html">Real Estate Resources</a></li>
-													<li><a href="service-details-1.html">What is ALTA?</a></li>
-													<li><a href="service-details-2.html">Test Your Knowledge</a></li>
-													<li><a href="service-details-1.html">Real Estate Glossary</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="closing-process.html">Closing Process</a></li>
+													<li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
+													<li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+													<li><a href="what-is-alta.html">What is ALTA?</a></li>
+													<li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
 												</ul>
 											</li>
 											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
+									<!--
 									<div class="menu-icon">
 										<div class="site-search">
 											<i class="fa fa-search"></i>
@@ -113,7 +113,8 @@
 												</form>
 											</div>
 										</div>
-									</div>									
+									</div>
+									-->
 								</div>						
 							</div>
 						</div>
@@ -261,7 +262,7 @@
 	
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -->
+		<!-- Footer Top Section Start -
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
@@ -332,13 +333,16 @@
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
 		<div class="footer-bottom-sec">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
-						</div>
-					</div>					
+			<div class="row">
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p><a href="http://www.meltingpotsolutions.co"><img src="img/mps_logo.png" style="width: 15%"></a></p>
+					</div>
 				</div>
 			</div>
 		</div>
