--- a/bankers.html
+++ b/bankers.html
@@ -80,8 +80,9 @@
 						<div class="col-md-12 nav-menu">
 							<div class="col-md-3">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
+									<a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
 								</div>
+								<br>
 							</div>
 							<div class="col-md-9">
 								<div class="menu">
@@ -102,6 +103,7 @@
 											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
+									<!--
 									<div class="menu-icon">
 										<div class="site-search">
 											<i class="fa fa-search"></i>
@@ -113,6 +115,7 @@
 											</div>
 										</div>
 									</div>
+									-->
 								</div>
 							</div>
 						</div>
@@ -131,10 +134,9 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-heading">
-						<h1>Our Employees</h1>
+						<h1>Bankers</h1>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="">Our Employees</a></li>
+							<li><a href="bankers.html">Click the headings below to read about the Citywide Title business processes..</a></li>
 						</ul>						
 					</div>					
 				</div>				
@@ -253,7 +255,7 @@
 	<!-- Service End -->
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -->
+		<!-- Footer Top Section Start
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
@@ -332,7 +334,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="copy-right ">
-						<p>LOGO</p>
+						<p><a href="http://www.meltingpotsolutions.co"><img src="img/mps_logo.png" style="width: 15%"></a></p>
 					</div>
 				</div>
 			</div>
