--- a/closing-cost-explained.html
+++ b/closing-cost-explained.html
@@ -80,8 +80,9 @@
                     <div class="col-md-12 nav-menu">
                         <div class="col-md-3">
                             <div class="logo">
-                                <a href="index.html"><img src="img/logo2.png" alt=""/></a>
+                                <a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
                             </div>
+                            <br>
                         </div>
                         <div class="col-md-9">
                             <div class="menu">
@@ -102,6 +103,7 @@
                                         <li class="css-border"><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </nav>
+                                <!--
                                 <div class="menu-icon">
                                     <div class="site-search">
                                         <i class="fa fa-search"></i>
@@ -113,6 +115,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                -->
                             </div>
                         </div>
                     </div>
@@ -236,7 +239,7 @@
 
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -->
+		<!-- Footer Top Section Start -
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
@@ -315,7 +318,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="copy-right ">
-                        <p>LOGO</p>
+                        <p><a href="http://www.meltingpotsolutions.co"><img src="img/mps_logo.png" style="width: 15%"></a></p>
                     </div>
                 </div>
             </div>
