--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 nav-menu">
-							<div class="col-md-3">
-								<div class="logo">
-									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
-								</div>
-							</div>
+                            <div class="col-md-3">
+                                <div class="logo">
+                                    <a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
+                                </div>
+                                <br>
+                            </div>
 							<div class="col-md-9">		
 								<div class="menu">
 									<nav id="main-menu" class="main-menu">
@@ -102,6 +103,7 @@
 											<li class="css-border"><a href="contact.html">Contact us</a></li>
 										</ul>
 									</nav>
+                                    <!--
 									<div class="menu-icon">	
 										<div class="site-search">	
 											<i class="fa fa-search"></i>
@@ -112,7 +114,8 @@
 												</form>							
 											</div>							
 										</div>
-									</div>									
+									</div>
+									-->
 								</div>						
 							</div>
 						</div>
@@ -956,7 +959,7 @@
 	
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -->
+		<!-- Footer Top Section Start -
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
@@ -1022,7 +1025,7 @@
 							</ul>
 						</div>
 					</div>
-					-->
+
 				</div>
 			</div>
 		</div>
