--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@
 		</div>	
 	</div>	
 	<!-- Team Section End -->			
-	<!-- All Patner Section Start -->
+	<!-- All Patner Section Start -
 	<div class="all-patner-sec">
 		<div class="container">
 			<div class="row">				
