--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,9 @@
 						<div class="col-md-12 nav-menu">
 							<div class="col-md-3">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo2.png" alt=""/></a>
+									<a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
 								</div>
+								<br>
 							</div>
 							<div class="col-md-9">
 								<div class="menu">
