--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="faq-sec">
 						<div class="sec-title">
+                            <br>
 							<h1><span>Ask</span> Question</h1>
 							<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet, lectus nullam sint</p>
 						</div>					
@@ -642,7 +643,7 @@
 								</div>
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 									<div class="filed-submitbtn">
-										<input value="Submite Now" name="submit" type="submit">
+										<input value="Submit Now" name="submit" type="submit">
 									</div>
 								</div>	
 							</fieldset>	
