--- a/contact.html
+++ b/contact.html
@@ -221,10 +221,12 @@
 							<div class="single-input-field">
 								<textarea placeholder="Message"></textarea>
 							</div>
-						</div>																				
-						<div class="single-input-fieldsbtn">
-							<input value="send now " type="submit">
-						</div>							
+						</div>
+						<div class="col-md-12 message-input">
+							<div class="single-input-fieldsbtn">
+								<input value="send now " type="submit">
+							</div>
+						</div>
 					</div>				
 				</div>
 			</div>
@@ -232,7 +234,7 @@
 	</div>
 	<!-- Contact Page Section End -->	
 
-	<!-- All Patner Section Start -->
+	<!-- All Patner Section Start -
 	<div class="all-patner-sec">
 		<div class="container">
 			<div class="row">				
