--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 						<div class="col-md-9 col-sm-8">
 							<div class="hd-lft">
 								<ul>
-									<li><i class="fa fa-comment-o"></i>Call us today</li>
 									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
-									<li><i class="fa fa-comment"></i>Live Chat</li>
 								</ul>
 							</div>	
 						</div>	
@@ -80,7 +78,7 @@
 						<div class="col-md-12 nav-menu">
                             <div class="col-md-3">
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
+                                    <a href="index.html"><img src="img/atlas_logo.png" alt="" style="height: 50px;"/></a>
                                 </div>
                                 <br>
                             </div>
@@ -656,13 +654,13 @@
 	<!-- Appointment Area End -->	
 	<!-- Why Choose Us Start -->
 	<div class="why-choose why-choos-bg">
-		<div class="container">			
-			<div class="row">	
-				<div class="col-md-6"></div>
-				<div class="col-md-6 why-choose-us-before">	
+        <div class="col-md-6" style="padding: 0px"><img src="img/key.jpg" id="key_img" class="hidden-sm hidden-xs"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 why-choose-us-before">
 					<div class="sec-title">
 						<h1><span>Why</span> Choose Us</h1>
-					</div>				
+					</div>
 					<div class="col-md-6 col-sm-6">
 						<div class="why-choose-item">
 							<div class="media">
