--- a/about.html
+++ b/about.html
@@ -57,14 +57,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-9 col-sm-8">
-                            <div class="hd-lft">
-                                <ul>
-                                    <li><i class="fa fa-comment-o"></i>Call us today</li>
-                                    <li><i class="fa fa-phone"></i>(888) 010203-4567</li>
-                                    <li><i class="fa fa-comment"></i>Live Chat</li>
-                                </ul>
-                            </div>
-                        </div>
+							<div class="hd-lft">
+								<ul>
+									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
+								</ul>
+							</div>
+						</div>
                         <div class="col-md-3 col-sm-4">
                             <div class="hd-rgt">
                                 <a href="#">example@mail.com</a>
@@ -80,7 +78,7 @@
                         <div class="col-md-12 nav-menu">
                             <div class="col-md-3">
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
+									<a href="index.html"><img src="img/atlas_logo.png" alt="" style="height: 50px;"/></a>
                                 </div>
 								<br>
                             </div>
