--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,7 @@
 						<div class="col-md-9 col-sm-8">
 							<div class="hd-lft">
 								<ul>
-									<li><i class="fa fa-comment-o"></i>Call us today</li>
 									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
-									<li><i class="fa fa-comment"></i>Live Chat</li>
 								</ul>
 							</div>
 						</div>
@@ -80,7 +78,7 @@
 						<div class="col-md-12 nav-menu">
 							<div class="col-md-3">
 								<div class="logo">
-									<a href="index.html"><img src="img/atlas_logo.png" alt=""/></a>
+									<a href="index.html"><img src="img/atlas_logo.png" alt="" style="height: 50px;"/></a>
 								</div>
 								<br>
 							</div>
@@ -138,7 +136,8 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="">Contact Us</a></li>
-						</ul>						
+						</ul>
+						<br>
 					</div>					
 				</div>				
 			</div>
