--- a/real-estate-glossary.html
+++ b/real-estate-glossary.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="cleaning, floor cleaning, creative, washing, window cleaning, agency, clean, cleaner, cleaning company, contractor, corporate, electrician, house work, household, maintenance">
     <meta name="author" content="Md. Shiddikur Rahaman">
     <!-- Title -->
-    <title>bClean - Cleaning Service HTML5 Responsive Template</title>
-    <!-- Favicon Icon -->
+    <title>ATLAS</title>
+    <!-- Favicon Icon -
     <link rel="icon" type="image/png" href="img/favicon.png">
 
 
