--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 	<meta name="keywords" content="cleaning, floor cleaning, creative, washing, window cleaning, agency, clean, cleaner, cleaning company, contractor, corporate, electrician, house work, household, maintenance">
 	<meta name="author" content="Md. Shiddikur Rahaman">
 	<!-- Title -->
-	<title>bClean - Cleaning Service HTML5 Responsive Template</title>		
-	<!-- Favicon Icon -->
+	<title>ATLAS</title>
+	<!-- Favicon Icon -
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	
 	<!-- Apple Touch Icons -->
@@ -216,7 +216,7 @@
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="team-member">
 						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-							<img src="img/founder1.jpg" alt="" style="width: 450px">
+							<img src="img/founder1.jpg" alt="" style="width: 350px">
 							<div class="team-overlay">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -252,7 +252,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="team-member">
                         <div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-                            <img src="img/founder2.jpg" alt="" style="width: 450px">
+                            <img src="img/founder2.jpg" alt="" style="width: 350px">
                             <div class="team-overlay">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
