--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<meta name="keywords" content="cleaning, floor cleaning, creative, washing, window cleaning, agency, clean, cleaner, cleaning company, contractor, corporate, electrician, house work, household, maintenance">
 	<meta name="author" content="Md. Shiddikur Rahaman">
 	<!-- Title -->
-	<title>bClean - Cleaning Service HTML5 Responsive Template</title>		
-	<!-- Favicon Icon -->
-	<link rel="icon" type="image/png" href="img/favicon.png">
-	
-	<!-- Apple Touch Icons -->
+    <title>ATLAS</title>
+    <!-- Favicon Icon -
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
+    <!-- Apple Touch Icons -->
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
