--- a/why-title-insurance.html
+++ b/why-title-insurance.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="cleaning, floor cleaning, creative, washing, window cleaning, agency, clean, cleaner, cleaning company, contractor, corporate, electrician, house work, household, maintenance">
     <meta name="author" content="Md. Shiddikur Rahaman">
     <!-- Title -->
-    <title>bClean - Cleaning Service HTML5 Responsive Template</title>
-    <!-- Favicon Icon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+	<title>ATLAS</title>
+	<!-- Favicon Icon -
+	<link rel="icon" type="image/png" href="img/favicon.png">
 
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
