--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</ul>
 							</div>	
 						</div>	
-						<div class="col-md-3 col-sm-4">	
+						<div class="col-md-3 col-sm-4" style="width: 25%">
 							<div class="hd-rgt">
 								<a href="#">example@mail.com</a>
 							</div>				
