--- a/project-3-column.html
+++ b/project-3-column.html
@@ -65,7 +65,7 @@
 								</ul>
 							</div>	
 						</div>	
-						<div class="col-md-3 col-sm-4">	
+						<div class="col-md-3 col-sm-4 flex">
 							<div class="hd-rgt">
 								<a href="#">Make An Appointment</a>
 							</div>				
