--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 			<div class="hd-sec">
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-6">
+						<div class="col-md-9 col-sm-8">
 							<div class="hd-lft">
 								<ul>
 									<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
 								</ul>
 							</div>	
 						</div>	
-						<div class="col-xs-6">
-							<div class="hd-rgt">
+						<div class="col-md-3 col-sm-4 flex">
+
 								<a href="#">example@mail.com</a>
-							</div>				
+
 						</div>					
 					</div>
 				</div>
