--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 							</div>	
 						</div>	
 						<div class="col-md-3 col-sm-4 flex">
-
+							<div class="hd-rgt">
 								<a href="#">example@mail.com</a>
-
+							</div>
 						</div>					
 					</div>
 				</div>
