--- a/home-owners.html
+++ b/home-owners.html
@@ -184,7 +184,7 @@
 	
 	<!-- Footer Section Start -->
 	<footer>	
-		<!-- Footer Top Section Start -
+		<!-- Footer Top Section Start -->
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
