--- a/home-owners.html
+++ b/home-owners.html
@@ -183,8 +183,8 @@
 
 	
 	<!-- Footer Section Start -->
-	<footer>	
-		<!-- Footer Top Section Start -->
+	<footer id="owner_footer">
+		<!-- Footer Top Section Start
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
