--- a/why-title-insurance.html
+++ b/why-title-insurance.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Md. Shiddikur Rahaman">
     <!-- Title -->
 	<title>ATLAS</title>
-	<!-- Favicon Icon -
-	<link rel="icon" type="image/png" href="img/favicon.png">
+	<!-- Favicon Icon -->
+	<link rel="icon" type="image/png" href="img/favicon.ico">
 
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
