--- a/closing-cost-explained.html
+++ b/closing-cost-explained.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="cleaning, floor cleaning, creative, washing, window cleaning, agency, clean, cleaner, cleaning company, contractor, corporate, electrician, house work, household, maintenance">
     <meta name="author" content="Md. Shiddikur Rahaman">
     <!-- Title -->
-    <title>bClean - Cleaning Service HTML5 Responsive Template</title>
+    <title>ATLAS</title>
     <!-- Favicon Icon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
 
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
