--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Title -->
     <title>ATLAS</title>
     <!-- Favicon Icon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
 
     <!-- Apple Touch Icons -->
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
