--- a/real-estate-glossary.html
+++ b/real-estate-glossary.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Md. Shiddikur Rahaman">
     <!-- Title -->
     <title>ATLAS</title>
-    <!-- Favicon Icon -
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <!-- Favicon Icon -->
+    <link rel="icon" type="image/png" href="img/favicon.ico">
 
 
     <!-- foreign CSS (golosary) -->
