--- a/what-is-alta.html
+++ b/what-is-alta.html
@@ -60,10 +60,11 @@
                         <div class="hd-lft">
                             <ul>
                                 <li><i class="fa fa-phone"></i>(888) 010203-4567</li>
+                                <li class="hidden-lg hidden-md hidden-sm"><i class="fa fa-paper-plane"></i><a href="#" style="color: whitesmoke">example@mail.com</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-4">
+                    <div class="col-md-3 col-sm-4 hidden-xs">
                         <div class="hd-rgt">
                             <a href="#">example@mail.com</a>
                         </div>
