--- a/why-title-insurance.html
+++ b/why-title-insurance.html
@@ -55,20 +55,21 @@
         <!-- Header Top Start -->
         <div class="hd-sec">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-9 col-sm-8">
+				<div class="row">
+					<div class="col-md-9 col-sm-8">
 						<div class="hd-lft">
 							<ul>
 								<li><i class="fa fa-phone"></i>(888) 010203-4567</li>
+								<li class="hidden-lg hidden-md hidden-sm"><i class="fa fa-paper-plane"></i><a href="#" style="color: whitesmoke">example@mail.com</a></li>
 							</ul>
 						</div>
 					</div>
-                    <div class="col-md-3 col-sm-4">
-                        <div class="hd-rgt">
-                            <a href="#">example@mail.com</a>
-                        </div>
-                    </div>
-                </div>
+					<div class="col-md-3 col-sm-4 hidden-xs">
+						<div class="hd-rgt">
+							<a href="#">example@mail.com</a>
+						</div>
+					</div>
+				</div>
             </div>
         </div>
         <!-- Header Top End -->
