--- a/contact.html
+++ b/contact.html
@@ -264,7 +264,7 @@
 	<!-- All Patner Section End -->
 	
 	<!-- Footer Section Start -->
-	<footer>	
+	<footer style="margin-top: 100px">
 		<!-- Footer Top Section Start -
 		<div class="footer-sec">
 			<div class="container">
