--- a/bankers.html
+++ b/bankers.html
@@ -79,7 +79,7 @@
 						<div class="col-md-12 nav-menu">
 							<div class="col-md-3">
 								<div class="logo">
-									<a href="index.html"><img src="img/atlas_logo.png" alt="" style="height: 50px;"/></a>
+									<a href="index.html"><img src="img/atlas_logo.png"/></a>
 								</div>
 								<br>
 							</div>
