--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="col-md-12 nav-menu">
                             <div class="col-md-3">
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/atlas_logo.png" alt="" style="height: 50px;"/></a>
+                                    <a href="index.html"><img src="img/atlas_logo.png"/></a>
                                 </div>
                                 <br>
                             </div>
@@ -595,7 +595,7 @@
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="appointment-form">		
 						<h2>Get A Quote</h2>
-						<form>
+						<form id="my_form">
 							<fieldset>
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 									<div class="sngl-field">
@@ -611,17 +611,21 @@
 									<div class="sngl-field">
 										<input placeholder="Phone" name="number" type="text">
 									</div>
-								</div>					
+								</div>
+
+                                <!--
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 									<div class="sngl-field">
 										<input placeholder="Time" name="number" type="text">
 									</div>
-								</div>									
+								</div>
+
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 									<div class="sngl-field">
 										<input placeholder="Date" name="date" type="text">
 									</div>
-								</div>									
+								</div>
+
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 									<div class="sngl-field">
 										<div class="select-arrow">
@@ -631,10 +635,11 @@
 											  <option value="House Planing">House Planing</option>
 											  <option value="Architectural Design">Architectural Design</option>
 											  <option value="Interior Design">Interior Design</option>
-											</select>								
+											</select>
 										</div>
 									</div>
-								</div>						
+								</div>
+								-->
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 									<div class="sngl-field">
 										<textarea placeholder="Message" name="message"></textarea>
@@ -644,7 +649,7 @@
 									<div class="filed-submitbtn">
 										<input value="Submit Now" name="submit" type="submit">
 									</div>
-								</div>	
+								</div>
 							</fieldset>	
 						</form>	
 					</div>
@@ -1064,6 +1069,8 @@
 	<script src="js/jquery.meanmenu.min.js"></script>
 	<script src="js/jquery.sticky.js"></script>
 	<script src="js/custom.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="js/message.js"></script>
 	<!-- Scripts Js End -->	
 </body>
 </html>
