--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/meanmenu.min.css">
-	<link rel="stylesheet" href="css/responsive.css">	
+	<link rel="stylesheet" href="css/responsive.css">
+
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -369,7 +370,9 @@
 								</div>
 								<div class="client-info">
 									<h2>Keyur S.</h2>
+									<!--
 									<span>Washington, DC</span>
+									-->
 									<div class="client-reviews">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -391,7 +394,9 @@
 								</div>
 								<div class="client-info">
 									<h2>Bethlehem A.</h2>
+									<!--
 									<span>Fairfax, VA</span>
+									-->
 									<div class="client-reviews">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -549,7 +554,7 @@
 						<div class="sec-title">
                             <br>
 							<h1><span>Ask</span> Question</h1>
-							<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet, lectus nullam sint</p>
+							<p>Hi there, we’re here if you’d like to chat</p>
 						</div>					
 						<div class="faq-single">
 							<div class="media">
@@ -559,8 +564,9 @@
 									</div>						
 								</div>						
 								<div class="media-body">
-									<h2>Can I help 24/7</h2>
-									<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed mattis, libero elit mi suscipit.</p>
+									<h4>Why do I need a title search?</h4>
+									<p>Title insurance protects the involved parties against defects and human error related to the property title that a title search may uncover.
+										When the title search is complete, title insurance protects the buyer and the lender by insuring clear title to the property.</p>
 								</div>				
 							</div>						
 						</div>				
@@ -572,8 +578,9 @@
 									</div>						
 								</div>						
 								<div class="media-body">
-									<h2>Can I refund payment</h2>
-									<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed mattis, libero elit mi suscipit.</p>
+									<h4>What is the dif-ference between title insurance and other types of insurance?</h4>
+									<p>While most insurance (auto, home, etc.) provides protection against future events (fires, tornados, hail damage, etc.), title insurance
+										protects you against matters that have already occurred, and that were not caused by any wrongdoing on your part.</p>
 								</div>				
 							</div>						
 						</div>					
@@ -585,8 +592,8 @@
 									</div>							
 								</div>						
 								<div class="media-body">
-									<h2>How many year's exprience</h2>
-									<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed mattis, libero elit mi suscipit.</p>
+									<h4>Who usually pays?</h4>
+									<p>The party responsible for paying for the two policies -- buyer's and lender's -- varies from state to state and sometimes from county to county. In some locales, the buyer may pay for one; the seller, the other.</p>
 								</div>				
 							</div>						
 						</div>						
@@ -671,58 +678,51 @@
 						<div class="why-choose-item">
 							<div class="media">
 							  <div class="why-choose-icon">
-								<a href="#">
 								 <img src="img/icon/network-support.png" alt=""/>
-								</a>
 							  </div>
 							  <div class="media-body">
 								<h2><a href="#">24/7 Support</a></h2>
-								<p>Simply dummy text of the printing andrety esetting industry.Lorem ipsum dolor sit amet, ligula magna at etiam.</p>
-							  </div>
-							</div>
-						</div>				
-					</div>				
-					<div class="col-md-6 col-sm-6">
-						<div class="why-choose-item">
-							<div class="media">
-							  <div class="why-choose-icon">
-								<a href="#">
-								 <img src="img/icon/group.png" alt=""/>
-								</a>
-							  </div>
-							  <div class="media-body">
-								<h2><a href="#">Professional Employees</a></h2>
-								<p>Simply dummy text of the printing andrety esetting industry.Lorem ipsum dolor sit amet, ligula magna at etiam.</p>
-							  </div>
-							</div>
-						</div>							
-					</div>							
-					<div class="col-md-6 col-sm-6">
-						<div class="why-choose-item">
-							<div class="media">
-							  <div class="why-choose-icon">
-								<a href="#">
-								 <img src="img/icon/lock.png" alt=""/>
-								</a>
-							  </div>
-							  <div class="media-body">
-								<h2><a href="#">Verified & Secured Service</a></h2>
-								<p>Simply dummy text of the printing andrety esetting industry.Lorem ipsum dolor sit amet, ligula magna at etiam.</p>
+								<p>As with all of our services, our 24 hour work is provided by only the best skilled professionals who have not only been chosen by us – they have chosen to work for us too.</p>
 							  </div>
 							</div>
 						</div>
-					</div>				
+					</div>
 					<div class="col-md-6 col-sm-6">
 						<div class="why-choose-item">
 							<div class="media">
 							  <div class="why-choose-icon">
-								<a href="#">
-								 <img src="img/icon/lock.png" alt=""/>
-								</a>
+								 <img src="img/icon/group.png" alt=""/>
 							  </div>
 							  <div class="media-body">
-								<h2><a href="#">Verified & Secured Service</a></h2>
-								<p>Simply dummy text of the printing andrety esetting industry.Lorem ipsum dolor sit amet, ligula magna at etiam.</p>
+								<h2><a href="#">Professional Employees</a></h2>
+								<p>We have professional closing officers ready to serve you </p>
+								<p style="color: transparent">We have professional closing officers ready to serve you to serve you</p>
+							  </div>
+							</div>
+						</div>							
+					</div>
+					<div class="col-md-6 col-sm-6">
+						<div class="why-choose-item">
+							<div class="media">
+								<div class="why-choose-icon">
+									<span class="fa fa-laptop fa-4x" style="color: #fab909"></span>
+								</div>
+								<div class="media-body">
+									<h2><a href="#">Tech company</a></h2>
+									<p>Latest technology, making your settlement process easy and worry free.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-6">
+						<div class="why-choose-item">
+							<div class="media">
+							  <div class="why-choose-icon">
+								<span class="fa fa-crosshairs fa-4x" style="color: #fab909"></span>
+							  </div>
+							  <div class="media-body">
+								<h2><a href="#">Personalized service</a></h2>
+								<p>One closing agent from beginning to end.</p>
 							  </div>
 							</div>
 						</div>
@@ -846,7 +846,7 @@
 		</div>
 	</div>
 	<!-- Pricing Section End -->		
-	<!-- Blog Section Start -->
+	<!-- Blog Section Start -
 	<div class="blog-sec pt-100 pb-80">
 		<div class="container">	
 			<div class="row">
