--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
 				<div class="col-md-7">
 					<div class="about-desc">
 						<div class="sec-title">
-							<h1><span>About </span>Our Company</h1>
+							<h1><span>About </span>Our Company.</h1>
 							<p>Welcome and thank you for visiting our site. Atlas Title, Inc. is excited to bring you the very best in Title Insurance and Settlement services.
 								We are committed to providing a superior value to our clients while maintaining integrity, honesty, and incomparable customer service.
 								Dedicated client representatives – providing one-on-one support to our clients. The flexibility we give to our customers along with the years
@@ -247,7 +247,7 @@
                         His innovative models are now being utilized by other networks in Chicago Public Schools and are restructuring approaches to skill acquisition and academic interventions.
                         Imran has received four consecutive Medal Awards for highest student achievement from the CPS Office of School Improvement and was a finalist for the Chicago DRIVE award.
                         He is the co-founder and CEO of Embarc, a multi-award winning post-secondary success program that is using experiential education to change the trajectories of lives.
-                        Under his leadership, Embarc has grown from 25 students in one school to nearly 460 in nine different Chicago Public High Schools
+                        Under his leadership, Embarc has grown from 25 students in one school to nearly 460 in nine different Chicago Public High Schools.
                     </p>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
