--- a/bankers.html
+++ b/bankers.html
@@ -160,6 +160,85 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="panel-group" id="accordionMenu" role="tablist" aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOne">
+							<h4 class="panel-title">
+								<a role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+									We close 7 days a week, 6:00am to 10:00pm
+								</a>
+							</h4>
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+							<div class="panel-body">
+								<p>We understand that not everyone is able to schedule their closing during regular business hours. That’s why we work around your schedule.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingTwo">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+									We will close your loan wherever you would like
+								</a>
+							</h4>
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+							<div class="panel-body">
+								<p>With one of our states largest on-site closing staff you will be able to offer your clients that added convenience of closing in their: home, office, restaurant, anyway!
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingThree">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+									Never be turned down for a closing again
+								</a>
+							</h4>
+						</div>
+						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+							<div class="panel-body">
+								<p>If you have a clear to close package we can close the same day even if it’s the last day of the month.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFour">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+									Citywide is culturally diverse
+								</a>
+							</h4>
+						</div>
+						<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+							<div class="panel-body">
+								<p>We have closers available who are fluent in Spanish and Lithuanian.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFive">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionMenu" href="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+									Citywide provides exceptional title clearance
+								</a>
+							</h4>
+						</div>
+						<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+							<div class="panel-body">
+								<p>We don’t just give you a number to call (like our competition); our unique and highly efficient team does the work for you. This service results in increased productivity of your operations.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--
 				<div class="service2-item">
 					<div class="col-md-12 col-sm-6">
 						<div class="service2-inner">
@@ -172,7 +251,7 @@
 								<div class="media-body">
 									<div class="service2-details">
 										<h2><a href="service-details.html">We close 7 days a week, 6:00am to 10:00pm</a></h2>
-										<p>We understand that not everyone is able to schedule their closing during regular business hours. That’s why we work around your schedule</p>
+										<p>We understand that not everyone is able to schedule their closing during regular business hours. That’s why we work around your schedule.</p>
 									</div>
 								</div>
 							</div>
@@ -252,10 +331,12 @@
 						</div>
 					</div>
 				</div>
+				-->
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<!-- Service End -->
 	<!-- Footer Section Start -->
 	<footer>	
