--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 						</div>						
 						<div class="single-testimonial">
 							<div class="client-comment">
-								<p>Just closed on my first condo and ATG was very helpful in getting me prepared for the process and getting me all the paperwork I needed.
+								<p>Just closed on my first condo and Atlas was very helpful in getting me prepared for the process and getting me all the paperwork I needed.
                                     The staff is very helpful and friendly I was recommended by a friend and I would recommend to others!!</p>
 							</div>						
 							<div class="clinet-inner">
@@ -554,7 +554,7 @@
 						<div class="sec-title">
                             <br>
 							<h1><span>Ask</span> Question</h1>
-							<p>Hi there, we’re here if you’d like to chat</p>
+							<p>Hi there, we’re here if you’d like to chat!</p>
 						</div>					
 						<div class="faq-single">
 							<div class="media">
@@ -578,7 +578,7 @@
 									</div>						
 								</div>						
 								<div class="media-body">
-									<h4>What is the dif-ference between title insurance and other types of insurance?</h4>
+									<h4>What is the difference between title insurance and other types of insurance?</h4>
 									<p>While most insurance (auto, home, etc.) provides protection against future events (fires, tornados, hail damage, etc.), title insurance
 										protects you against matters that have already occurred, and that were not caused by any wrongdoing on your part.</p>
 								</div>				
@@ -693,10 +693,9 @@
 							  <div class="why-choose-icon">
 								 <img src="img/icon/group.png" alt=""/>
 							  </div>
-							  <div class="media-body">
+							  <div class="media-body" id="special">
 								<h2><a href="#">Professional Employees</a></h2>
 								<p>We have professional closing officers ready to serve you </p>
-								<p style="color: transparent">We have professional closing officers ready to serve you to serve you</p>
 							  </div>
 							</div>
 						</div>							
