--- a/bankers.html
+++ b/bankers.html
@@ -91,10 +91,10 @@
 											<li class="active css-border"><a href="bankers.html">Bankers</a></li>
 											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?</a></li>
 													<li><a href="closing-process.html">Closing Process</a></li>
 													<li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
-													<li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+
 													<li><a href="what-is-alta.html">What is ALTA?</a></li>
 													<li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
 												</ul>
