--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,10 @@
 											<li class="css-border"><a href="bankers.html">Bankers</a></li>
 											<li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
 												<ul>
-													<li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+													<li><a href="why-title-insurance.html">Why Title Insurance?</a></li>
 													<li><a href="closing-process.html">Closing Process</a></li>
 													<li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
-													<li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+
 													<li><a href="what-is-alta.html">What is ALTA?</a></li>
 													<li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
 												</ul>
@@ -169,11 +169,11 @@
 							</div>
 							<div class="contact-info-text">
 								<h2>e-mail</h2>
-								<span>yourmail@gmail.com</span> 
-								<span>demomail@gmail.com</span>
+								<span>atlas.notice@gmail.com</span>
 							</div>
 						</div>						
-					</div>					
+					</div>
+					<!--
 					<div class="contact-info">
 						<div class="contact-info-item">
 							<div class="contact-info-icon">
@@ -186,6 +186,7 @@
 							</div>
 						</div>						
 					</div>
+					-->
 				</div>
 				<div class="col-md-8">
 					<form id="my_form">
