--- a/what-is-alta.html
+++ b/what-is-alta.html
@@ -91,10 +91,10 @@
                                         <li class="css-border"><a href="bankers.html">Bankers</a></li>
                                         <li class="css-border"><a href="home-owners.html">Home owners<i class="fa fa-angle-down"></i></a>
                                             <ul>
-                                                <li><a href="why-title-insurance.html">Why Title Insurance?1</a></li>
+                                                <li><a href="why-title-insurance.html">Why Title Insurance?</a></li>
                                                 <li><a href="closing-process.html">Closing Process</a></li>
                                                 <li><a href="closing-cost-explained.html">Closing Costs Explained</a></li>
-                                                <li><a href="real-estate-resources.html">Real Estate Resources</a></li>
+
                                                 <li><a href="what-is-alta.html">What is ALTA?</a></li>
                                                 <li><a href="real-estate-glossary.html">Real Estate Glossary</a></li>
                                             </ul>
@@ -177,7 +177,7 @@
                                 Involvement by a title company is often thought of as the catalyst that allows a real estate closing to proceed smoothly until completed.
                             </p>
 							<p>
-                                Consumers are encouraged to <u><a href="http://www.homeclosing101.org/shopping.cfm">shop for a title company</a></u> (also called settlement company or attorney in some areas)
+                                Consumers are encouraged to shop for a title company (also called settlement company or attorney in some areas)
                                 to conduct the closing and issue you an Owner&#8217;s Policy of Title Insurance.
 							</p>
 						</div>
